# manga-dlp

./: .bumpversion.cfg  .coveragerc  .drone.yml  .gitignore  .tool-versions  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  get_release_notes.sh  justfile  manga-dlp.py  mangas.txt  md-dlp.py  pyproject.toml  release-files.txt  release.sh  renovate.json  requirements.txt  requirements_dev.txt  set_version.sh  setup.py  sonar-project.properties  testing.py  tox.ini
.gitea/workflows/: build.yml  check_code.yml  release.yml  scheduled.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-for-new-site.md
.woodpecker/: 01_test.yml  build_docker.yml  publish_build.yml  publish_docker.yml  publish_docker_amd64.yml  publish_docker_arm64.yml  publish_docker_manifest.yml  publish_pre_release.yml  publish_release.yml  test_build.yml  test_docker.yml  test_docker_amd64.yml  test_docker_arm64.yml  test_release.yml  test_tox_amd64.yml  test_tox_arm64.yml  tests.yml  tests_pr.yml
contrib/: README.md  api_template.py  justfile  requirements_dev.txt
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm64  README.md  docker-compose.yml  manifest.tmpl
docker/rootfs/app/schedules/: daily  daily.sh
docker/rootfs/etc/cont-init.d/: 20-setenv  20-setenv.sh  51-fix-schedule.sh  52-set-schedule.sh  80-fix-perms  80-fix-perms.sh
docker/rootfs/etc/cron.d/: 01-manga-dlp  01_mangadlp  mangadlp
docs/: mkdocs.yml
docs/pages/: docker.md  download.md  hooks.md  index.md
mangadexdlp/: api.py  database.py  downloader.py  main.py  utils.py
mangadlp/: __init__.py  __main__.py  app.py  cache.py  cli.py  downloader.py  hooks.py  input.py  logger.py  main.py  metadata.py  types.py  utils.py
mangadlp/api/: mangadex.py
mangadlp/metadata/: ComicInfo.xml
src/mangadlp/: __main__.py  app.py  cache.py  cli.py  downloader.py  hooks.py  logger.py  metadata.py  models.py  utils.py
src/mangadlp/api/: mangadex.py
tests/: ComicInfo_test.xml  test.txt  test_01_app.py  test_02_utils.py  test_03_downloader.py  test_04_input.py  test_05_hooks.py  test_06_cache.py  test_07_metadata.py  test_11_api_mangadex.py  test_21_full.py  test_22_all_flags.py  test_api_mangadex.py  test_list.txt  test_list2.txt  test_main.py  test_utils.py
